--- a/config.json
+++ b/config.json
@@ -2,8 +2,9 @@
   "repos" : [
     {"name" : "jerk", "path" : "secreek/jerk"},
     {"name" : "slidown", "path" : "secreek/slidown"},
-    {"name" : "drinkup", "path" : "secreek/drinkup"}
-    {"name" : "hackatus", "path" : "secreek/hackatus"}
+    {"name" : "drinkup", "path" : "secreek/drinkup"},
+    {"name" : "hackatus", "path" : "secreek/hackatus"},
+	{"name" : "hackatus", "path" : "void-main/GitBuzzer"}
   ],
   "since" : "2013-04-20T10:00Z"
 }
