--- a/config.json
+++ b/config.json
@@ -5,8 +5,7 @@
   {"name" : "Hackatus!", "path" : "secreek/hackatus"},
   {"name" : "ac-improved", "path" : "EmingK/ac-improved"},
   {"name" : "Statistics-Board", "path" : "longlongh4/Statistics-Board"},
-  {"name" : "Git Buzzer", "path" : "void-main/GitBuzzer"},
-  {"name" : "Cute Album", "path" : "longlongh4/Cute-Album"}
+  {"name" : "EatWhat", "path" : "guori12321/EatWhat"}
   ],
   "since" : "2013-04-28T02:00Z"
 }
