update new repo

--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
   {"name" : "Hackatus!", "path" : "secreek/hackatus"},
   {"name" : "ac-improved", "path" : "EmingK/ac-improved"},
   {"name" : "Statistics-Board", "path" : "longlongh4/Statistics-Board"},
-  {"name" : "EatWhat", "path" : "guori12321/EatWhat"}
+  {"name" : "EatWhat", "path" : "guori12321/EatWhat"},
+  {"name" : "RPi-Maid", "path" : "KJlmfe/Raspberry-Pi-Maid"}
   ],
   "since" : "2013-04-28T02:00Z"
 }
